test/corpus/directives
==========
Headings
==========
=head1 NAME
=head1 DESCRIPTION
=head2 Example
----------
(pod
  (command_paragraph (command) (content))
  (command_paragraph (command) (content))
  (command_paragraph (command) (content)))
==========
Blank lines
==========
=head1 NAME

=head1 DESCRIPTION

=head2 Example

----------
(pod
  (command_paragraph (command) (content))
  (command_paragraph (command) (content))
  (command_paragraph (command) (content)))
==========
Indented paragraphs
==========
=over 4

=item *

Thing one

=item *

Thing two

=back
----------
(pod
  (command_paragraph (command) (content))
  (command_paragraph (command) (content))
  (plain_paragraph (content))
  (command_paragraph (command) (content))
  (plain_paragraph (content))
  (command_paragraph (command)))
==========
Plain paragraphs
==========
=head1 NAME

The program name

=head1 DESCRIPTION

A description goes here
on multiple
lines
----------
(pod
  (command_paragraph (command) (content))
  (plain_paragraph (content))
  (command_paragraph (command) (content))
  (plain_paragraph (content)))
==========
Verbatim Paragraphs
==========
=head1 EXAMPLE

  Here is an indented block
  Its lines are literal B<1>

----------
(pod
  (command_paragraph (command) (content))
  (verbatim_paragraph (content)))
