test/corpus/interior-sequences
==========
Sequence
==========
B<bold>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence (sequence_letter) (content)))))
==========
Empty sequence
==========
Z<>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence (sequence_letter)))))
==========
Mixed sequence/content
==========
normal B<bold> content
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence (sequence_letter) (content)))))
==========
Multiple chevrons
==========
A sequence with C<< inner->arrows >>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence (sequence_letter) (content)))))
==========
Nested sequence
==========
B<I<bold italic>>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence
        (sequence_letter)
        (content
          (interior_sequence (sequence_letter) (content)))))))
==========
Multiple nested
==========
A<< contains <=> and B<b> inside it >>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence
        (sequence_letter)
        (content
          (interior_sequence (sequence_letter) (content)))))))
==========
Does not consume shorter sequence of '>'
==========
C<<> still inside C here; so A<is inside both>>>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence
        (sequence_letter)
        (content
          (interior_sequence (sequence_letter) (content)))))))
==========
Unconfused by single letters
==========
B

C
----------
(pod
  (plain_paragraph (content))
  (plain_paragraph (content)))
==========
Unconfused by incomplete sequences
==========
B<

C<
----------
; These yield errors but at least they don't stall the parser. The exact
; nature of the errors might be fragile, so this test may need changing in
; future.
(pod
  (ERROR
    (sequence_letter)
    (format_name)))
==========
Incomplete sequence does not loop forever
==========
Z<
=cut
----------
; Same warning as above in terms of fragility. Fixes gh#2
(pod
  (ERROR (sequence_letter) (cut_command))
)
==========
Escape sequence
==========
E<lt>
----------
(pod
  (plain_paragraph
    (content
      (escape_sequence (sequence_letter) (content)))))
==========
Empty escape sequence
==========
E<>
----------
(pod
  (plain_paragraph
    (content
      (escape_sequence (sequence_letter)))))
==========
Numeric escape sequence
==========
E<0x263A>
----------
(pod
  (plain_paragraph
    (content
      (escape_sequence (sequence_letter) (content)))))
==========
Escape with multiple chevrons
==========
E<< verbar >>
----------
(pod
  (plain_paragraph
    (content
      (escape_sequence (sequence_letter) (content)))))
==========
Escape content is not markup
==========
E<B<lt>>
----------
(pod
  (plain_paragraph
    (content
      (escape_sequence (sequence_letter) (content)))))
==========
Escape nested in other sequence
==========
B<some E<gt> thing>
----------
(pod
  (plain_paragraph
    (content
      (interior_sequence
        (sequence_letter)
        (content
          (escape_sequence (sequence_letter) (content)))))))
